...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Title:" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Company:" />

            <EditText
                android:id="@+id/companyEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Location:" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CoL Index:" />

            <EditText
                android:id="@+id/colEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Salary:" />

            <EditText
                android:id="@+id/salaryEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Bonus:" />

            <EditText
                android:id="@+id/yearlyBonusEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Gym Membership:" />

            <EditText
                android:id="@+id/gymMembershipEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="401K Match" />

            <EditText
                android:id="@+id/benefitsEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Leave Time:" />

            <EditText
                android:id="@+id/leaveTimeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pet Insurance:" />

            <EditText
                android:id="@+id/petInsuranceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSaveCurrentJobClick"
                android:text="Save" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
