<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:background="?android:attr/windowBackground"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:menu="@menu/bottom_nav_menu" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_host_fragment_activity_main"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_constraintBottom_toTopOf="@id/nav_view"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:navGraph="@navigation/mobile_navigation" />-->

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="325dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="145dp">

        <Button
            android:id="@+id/currentJobButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:onClick="onCurrentJobClick"
            android:text="Enter CURRENT JOB"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/enterJobOfferButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:onClick="onJobOfferClick"
            android:text="ENTER JOB OFFERS"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/comparisonSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:onClick="onJobComparisonClick"
            android:text="ADJUST COMPARISON SETTINGS"

            android:textColor="#FFFFFF" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/compareJobsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:onClick="onJobComparerClick"
            android:text="COMPARE JOBS"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>